# WebsiteWatch

./: README.md
cdk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
cdk/lib/: app.ts
cdk/lib/stacks/: website-watch-stack.ts
lambda/: .gitignore  Cargo.toml
lambda/.cargo/: config
lambda/src/: accessors.rs  main.rs  processing.rs
lambda/src/accessors/: environment_accessor.rs  sns_accessor.rs  website_accessor.rs  website_watch_config_accessor.rs
lambda/src/processing/: executor.rs  hash_generator.rs
lambda/src/res/: config.json.example
