[package]
name = "website_watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version= "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-sns = "1.7.0"
lambda_runtime = "0.8.3"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.10.2"
reqwest = { version = "0.11.22" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
tokio = { version = "1", features = ["full"] }